--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.12",
     "@tailwindcss/forms": "^0.5.3",
+    "@vueuse/core": "^9.13.0",
     "axios": "^1.3.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
