Update README / Environments
Updated README with build commands.
Added 'staging' environment for full local builds.

--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -15,4 +15,6 @@ services:
 
   doggie-dashboard:
     container_name: doggie-dashboard
-    image: andrewxyz/doggie-match-maker
+    build:
+      context: .
+      dockerfile: Dockerfile
