--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,7 +11,7 @@ services:
       - 80:80
       - 443:443
     depends_on:
-      - portfolio-landing
+      - doggie-dashboard
 
   doggie-dashboard:
     container_name: doggie-dashboard
