Properly Tag Prod Image
Missing :main tag from prod docker-compose utilizing hosted image.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,4 @@ services:
 
   doggie-dashboard:
     container_name: doggie-dashboard
-    image: andrewxyz/doggie-match-maker
+    image: andrewxyz/doggie-match-maker:main
